--- a/res/layout/listview_item.xml
+++ b/res/layout/listview_item.xml
@@ -4,5 +4,13 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
     
     
+    <TextView 
+        android:id="@+id/tv_lv_item"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="18sp"
+        />
+    
+    
     
 </LinearLayout>
