--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,11 +1,30 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent">
 
-    <LinearLayout
-        android:id="@+id/activity_main_ll"
+    
+    <include
+        android:id="@+id/ly_main_buttombar"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_alignParentBottom="true"
+        layout="@layout/bar_buttom" />
+
+    <include
+        android:id="@+id/ly_main_topbar"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_alignParentTop="true"
+        layout="@layout/bar_top" />
+    
+    <android.support.v4.view.ViewPager
+        android:id="@+id/vp"
+        android:layout_above="@id/ly_main_buttombar"
+        android:layout_below="@id/ly_main_topbar"
         android:layout_width="match_parent"
         android:layout_height="match_parent" >
-    </LinearLayout>
+    </android.support.v4.view.ViewPager>
 
-</LinearLayout>
+    
+
+</RelativeLayout>
