--- a/res/layout/fragment_medicine.xml
+++ b/res/layout/fragment_medicine.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:gravity="center" >
-
-<TextView 
+    android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:layout_width="wrap_content"
-    android:text="药物"
-    />
+    android:descendantFocusability="blocksDescendants"
+    android:orientation="vertical" >
+
+    <com.yin.myhealthy.view.ChildViewPager
+        android:id="@+id/child_vp_medicine"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent" />
 
 </LinearLayout>
