重大更新： 1.完美实现禁止滑动的viewpager。原理：重写viewpager的ontouch事件，让其直接返回false 2.完美实现viewpager里面嵌套listview，让其能左右上下滑动。原理：在viewpager使用触摸事件拦截器

--- a/res/layout/fragment_medicine.xml
+++ b/res/layout/fragment_medicine.xml
@@ -8,6 +8,6 @@
     <com.yin.myhealthy.view.ChildViewPager
         android:id="@+id/child_vp_medicine"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent" />
+        android:layout_height="400dp" />
 
 </LinearLayout>
