--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,8 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent" >
 
-    
     <include
         android:id="@+id/ly_main_buttombar"
         android:layout_width="match_parent"
@@ -16,17 +15,23 @@
         android:layout_height="50dp"
         android:layout_alignParentTop="true"
         layout="@layout/bar_top" />
-    
-    
-    
-    <android.support.v4.view.ViewPager
+
+    <!--
+         <android.support.v4.view.ViewPager
         android:id="@+id/vp"
         android:layout_above="@id/ly_main_buttombar"
         android:layout_below="@id/ly_main_topbar"
         android:layout_width="match_parent"
         android:layout_height="match_parent" >
     </android.support.v4.view.ViewPager>
+    -->
 
-    
+    <com.yin.myhealthy.view.NoSlipViewPager
+        android:id="@+id/vp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@id/ly_main_buttombar"
+        android:layout_below="@id/ly_main_topbar" >
+    </com.yin.myhealthy.view.NoSlipViewPager>
 
 </RelativeLayout>
