--- a/res/layout/fragment_knowledge.xml
+++ b/res/layout/fragment_knowledge.xml
@@ -2,14 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:gravity="center"
-     >
+    android:orientation="vertical" >
 
-<TextView 
-    android:layout_height="wrap_content"
-    android:layout_width="wrap_content"
-    android:text="百科"
-    />
+    <com.yin.myhealthy.view.ChildViewPager
+        android:id="@+id/child_vp"
+        android:layout_width="wrap_content"
+        android:layout_height="340dp" />
 
 </LinearLayout>
