1.更换软件主页面框架，取消原本使用Viewpager，改为使用FragmentTabHost

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -2,7 +2,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
-    <include
+    <!--
+         <include
         android:id="@+id/ly_main_buttombar"
         android:layout_width="match_parent"
         android:layout_height="50dp"
@@ -16,7 +17,7 @@
         android:layout_alignParentTop="true"
         layout="@layout/bar_top" />
 
-    <!--
+    
          <android.support.v4.view.ViewPager
         android:id="@+id/vp"
         android:layout_above="@id/ly_main_buttombar"
@@ -24,7 +25,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" >
     </android.support.v4.view.ViewPager>
-    -->
+   
 
     <com.yin.myhealthy.view.NoSlipViewPager
         android:id="@+id/vp"
@@ -33,5 +34,86 @@
         android:layout_above="@id/ly_main_buttombar"
         android:layout_below="@id/ly_main_topbar" >
     </com.yin.myhealthy.view.NoSlipViewPager>
+    -->
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:orientation="vertical" >
+
+        <FrameLayout
+            android:id="@+id/tab_content"
+            android:layout_width="fill_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1.0"
+            android:background="#77557799" />
+
+        <RadioGroup
+            android:id="@+id/tabs_rg"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:paddingBottom="7dp"
+            android:paddingTop="7dp" >
+
+            <RadioButton
+                android:id="@+id/tab_rb_a"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1.0"
+                android:background="@drawable/selector_tab"
+                android:button="@null"
+                android:checked="true"
+                android:drawableTop="@drawable/tablatestalert"
+                android:gravity="center"
+                android:singleLine="true"
+                android:text="Tab1"
+                android:textColor="#000000"
+                android:textSize="13sp" />
+
+            <RadioButton
+                android:id="@+id/tab_rb_b"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1.0"
+                android:background="@drawable/selector_tab"
+                android:button="@null"
+                android:drawableTop="@drawable/tabsearch"
+                android:gravity="center"
+                android:singleLine="true"
+                android:text="Tab2"
+                android:textColor="#000000"
+                android:textSize="13sp" />
+
+            <RadioButton
+                android:id="@+id/tab_rb_c"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1.0"
+                android:background="@drawable/selector_tab"
+                android:button="@null"
+                android:drawableTop="@drawable/tabrecommd"
+                android:gravity="center"
+                android:singleLine="true"
+                android:text="Tab3"
+                android:textColor="#000000"
+                android:textSize="13sp" />
+
+            <RadioButton
+                android:id="@+id/tab_rb_d"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1.0"
+                android:background="@drawable/selector_tab"
+                android:button="@null"
+                android:drawableTop="@drawable/tabconfigicon"
+                android:gravity="center"
+                android:singleLine="true"
+                android:text="Tab4"
+                android:textColor="#000000"
+                android:textSize="13sp" />
+        </RadioGroup>
+    </LinearLayout>
 
 </RelativeLayout>
