--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,6 +1,29 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical" >
+
+    <FrameLayout
+        android:id="@+id/realtabcontent"
+        android:layout_width="fill_parent"
+        android:layout_height="0dip"
+        android:layout_weight="1" />
+
+    <android.support.v4.app.FragmentTabHost
+        android:id="@android:id/tabhost"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" 
+        >
+
+        <FrameLayout
+            android:id="@android:id/tabcontent"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="0" />            
+    </android.support.v4.app.FragmentTabHost>
+
+</LinearLayout>
 
     <!--
          <include
@@ -33,10 +56,17 @@
         android:layout_height="match_parent"
         android:layout_above="@id/ly_main_buttombar"
         android:layout_below="@id/ly_main_topbar" >
-    </com.yin.myhealthy.view.NoSlipViewPager>
+    </com.yin.myhealthy.view.NoSlipViewPager>
     -->
 
-    <LinearLayout
+
+    <!--
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" >
+    
+    
+         <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:orientation="vertical" >
@@ -117,3 +147,4 @@
     </LinearLayout>
 
 </RelativeLayout>
+    -->
