1.新增了导航栏，初步对medicine页面进行设置

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,31 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:orientation="vertical" >
-
-    <FrameLayout
-        android:id="@+id/realtabcontent"
-        android:layout_width="fill_parent"
-        android:layout_height="0dip"
-        android:layout_weight="1" />
-
-    <android.support.v4.app.FragmentTabHost
-        android:id="@android:id/tabhost"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content" 
-        >
-
-        <FrameLayout
-            android:id="@android:id/tabcontent"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_weight="0" />            
-    </android.support.v4.app.FragmentTabHost>
-
-</LinearLayout>
+    android:layout_height="fill_parent" >
 
     <!--
+         <include
+        android:id="@+id/ly_main_topbar"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_alignParentTop="true"
+        layout="@layout/bar_top" />
+    -->
+    <LinearLayout
+        android:id="@+id/ll_topbar"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:orientation="horizontal"
+        android:gravity="center_horizontal"
+         >
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_below="@id/ll_topbar"
+        android:orientation="vertical" >
+
+        <FrameLayout
+            android:id="@+id/realtabcontent"
+            android:layout_width="fill_parent"
+            android:layout_height="0dip"
+            android:layout_weight="1" />
+
+        <android.support.v4.app.FragmentTabHost
+            android:id="@android:id/tabhost"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content" >
+
+            <FrameLayout
+                android:id="@android:id/tabcontent"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_weight="0" />
+        </android.support.v4.app.FragmentTabHost>
+    </LinearLayout>
+
+</RelativeLayout><!--
          <include
         android:id="@+id/ly_main_buttombar"
         android:layout_width="match_parent"
@@ -56,95 +76,6 @@
         android:layout_height="match_parent"
         android:layout_above="@id/ly_main_buttombar"
         android:layout_below="@id/ly_main_topbar" >
-    </com.yin.myhealthy.view.NoSlipViewPager>
-    -->
+    </com.yin.myhealthy.view.NoSlipViewPager>
+-->
 
-
-    <!--
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent" >
-    
-    
-         <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:orientation="vertical" >
-
-        <FrameLayout
-            android:id="@+id/tab_content"
-            android:layout_width="fill_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1.0"
-            android:background="#77557799" />
-
-        <RadioGroup
-            android:id="@+id/tabs_rg"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="horizontal"
-            android:paddingBottom="7dp"
-            android:paddingTop="7dp" >
-
-            <RadioButton
-                android:id="@+id/tab_rb_a"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1.0"
-                android:background="@drawable/selector_tab"
-                android:button="@null"
-                android:checked="true"
-                android:drawableTop="@drawable/tablatestalert"
-                android:gravity="center"
-                android:singleLine="true"
-                android:text="Tab1"
-                android:textColor="#000000"
-                android:textSize="13sp" />
-
-            <RadioButton
-                android:id="@+id/tab_rb_b"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1.0"
-                android:background="@drawable/selector_tab"
-                android:button="@null"
-                android:drawableTop="@drawable/tabsearch"
-                android:gravity="center"
-                android:singleLine="true"
-                android:text="Tab2"
-                android:textColor="#000000"
-                android:textSize="13sp" />
-
-            <RadioButton
-                android:id="@+id/tab_rb_c"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1.0"
-                android:background="@drawable/selector_tab"
-                android:button="@null"
-                android:drawableTop="@drawable/tabrecommd"
-                android:gravity="center"
-                android:singleLine="true"
-                android:text="Tab3"
-                android:textColor="#000000"
-                android:textSize="13sp" />
-
-            <RadioButton
-                android:id="@+id/tab_rb_d"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1.0"
-                android:background="@drawable/selector_tab"
-                android:button="@null"
-                android:drawableTop="@drawable/tabconfigicon"
-                android:gravity="center"
-                android:singleLine="true"
-                android:text="Tab4"
-                android:textColor="#000000"
-                android:textSize="13sp" />
-        </RadioGroup>
-    </LinearLayout>
-
-</RelativeLayout>
-    -->
