--- a/res/layout/bar_top.xml
+++ b/res/layout/bar_top.xml
@@ -3,10 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="50dp"
     android:orientation="horizontal" 
-    
     >
     
-	    <ImageButton
+<!-- 	    <ImageButton
 	        android:id="@+id/imbtn_topbar_sing"
 	        android:layout_width="match_parent"
 	        android:layout_height="match_parent"
@@ -33,7 +32,7 @@
 	        android:layout_weight="1"
 	        android:scaleType="fitCenter"
 	        android:src="@drawable/buttombar_knowledge">
-	    </ImageButton>    
+	    </ImageButton>     -->
         
         
     
