1.修改Utils里面的async工具类，取消eginer类，直接一步就能从网络上的API拿数据 2.定义了singleNesFragmen，用来取得不同类别的新闻列表的fragment，并在ViewPager中显示

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -46,7 +46,8 @@
         </android.support.v4.app.FragmentTabHost>
     </LinearLayout>
 
-</RelativeLayout><!--
+</RelativeLayout>
+<!--
          <include
         android:id="@+id/ly_main_buttombar"
         android:layout_width="match_parent"
