--- a/res/layout/activity_context.xml
+++ b/res/layout/activity_context.xml
@@ -27,20 +27,21 @@
 
         <TextView
             android:id="@+id/tv_context_title"
-            android:layout_width="wrap_content"
+            android:layout_width="250dp"
             android:layout_height="match_parent"
-            android:layout_alignLeft="@id/ib_context_back"
-            android:layout_alignRight="@id/ib_context_more"
-            android:gravity="center"
-            android:text="title"
+            android:layout_centerHorizontal="true"
+            android:singleLine="false"
+      		android:gravity="center_horizontal"
             android:textSize="18sp" />
     </RelativeLayout>
 
     <RelativeLayout
         android:id="@+id/rl_context_second"
         android:layout_width="match_parent"
-        android:layout_height="20dp"
-        android:layout_below="@id/rl_context_first" >
+        android:layout_height="35dp"
+        android:layout_below="@id/rl_context_first" 
+        android:layout_marginLeft="4dp"
+        android:layout_marginRight="4dp">
 
         <TextView
             android:id="@+id/tv_context_time"
@@ -48,17 +49,14 @@
             android:layout_height="match_parent"
             android:layout_alignParentRight="true"
             android:gravity="center"
-            android:text="时间"
             android:textSize="18sp" />
 
         <TextView
             android:id="@+id/tv_context_tag"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_alignRight="@id/tv_context_time"
-            android:layout_marginRight="120dp"
+            android:layout_alignParentLeft="true"
             android:gravity="center"
-            android:text="类别"
             android:textSize="18sp" />
     </RelativeLayout>
 
@@ -66,8 +64,10 @@
         android:id="@+id/rl_context_third"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/rl_context_second" 
-        android:gravity="center_horizontal"
+        android:layout_below="@id/rl_context_second"
+        android:gravity="center_horizontal" 
+        android:layout_marginLeft="4dp"
+        android:layout_marginRight="4dp"
         >
 
         <com.loopj.android.image.SmartImageView
@@ -75,18 +75,23 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
-            
-            android:src="@drawable/ic_launcher" />
+            />
 
-        <TextView
+        <ScrollView 
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            >
+            <TextView
             android:id="@+id/tv_context_contextmsg"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/siv_context_img"
-            
-            android:gravity="center"
-            android:text="正文"
+            android:gravity="left"
             android:textSize="18sp" />
+            
+        </ScrollView>
+        
+        
     </RelativeLayout>
 
 </RelativeLayout>
