1.初步完成饮食页面的Fragment

--- a/res/layout/fragment_diet.xml
+++ b/res/layout/fragment_diet.xml
@@ -6,8 +6,8 @@
     android:orientation="vertical" >
 
     <com.yin.myhealthy.view.ChildViewPager
-        android:id="@+id/child_vp"
+        android:id="@+id/child_vp_diet"
         android:layout_width="wrap_content"
-        android:layout_height="240dp" />
+        android:layout_height="match_parent" />
 
 </LinearLayout>
