--- a/res/layout/lv_pd_footer.xml
+++ b/res/layout/lv_pd_footer.xml
@@ -1,28 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>  
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"  
     android:layout_width="fill_parent"  
-    android:layout_height="fill_parent"  
+    android:layout_height="40dp"  
     android:gravity="center_horizontal"  
     android:orientation="horizontal"  
     android:padding="15dp" 
     android:id="@+id/pd_lv_ll"
     >  
   
+    <!-- 暂时设置进度条不可见 -->
     <ProgressBar  
         android:id="@+id/pb_load_progress"  
         style="@android:style/Widget.ProgressBar.Small.Inverse"  
         android:layout_width="wrap_content"  
         android:layout_height="wrap_content"  
         android:gravity="center"  
+        
+        android:visibility="gone"
         android:indeterminate="true">  
     </ProgressBar>  
   
     <Button  
         android:id="@+id/btn_load_more"  
-        android:layout_width="wrap_content"  
-        android:layout_height="wrap_content"  
+        android:layout_width="match_parent"  
+        android:layout_height="match_parent"  
         android:layout_marginLeft="10.0dp"  
         android:gravity="center"  
+        android:background="#00000000"
         android:text="加载更多"  >  
     </Button>  
   
