--- a/res/layout/lv_pd_header.xml
+++ b/res/layout/lv_pd_header.xml
@@ -3,7 +3,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"  
     android:layout_width="fill_parent"  
     android:layout_height="wrap_content"  
-    android:background="#000000" >  
+    android:background="#00000000" >  
   
     <!-- 内容 -->  
   
@@ -38,7 +38,8 @@
                 android:layout_width="wrap_content"  
                 android:layout_height="wrap_content"  
                 android:layout_gravity="center"  
-                android:visibility="gone" />  
+                android:visibility="gone"
+                 />  
         </FrameLayout>  
   
         <!-- 提示、最近更新 -->  
@@ -56,8 +57,7 @@
                 android:id="@+id/lvHeaderTipsTv"  
                 android:layout_width="wrap_content"  
                 android:layout_height="wrap_content"  
-                android:text="下拉刷新"  
-                
+                android:text="下拉刷新"
                 android:textSize="20sp" />  
   
             <!-- 最近更新 -->  
