1.新增listview功能，若把全部数据都加载完，不会再把重复的数据加载在listview中（修改各个singleListViewFragmen）。不过存在问题：toast消息无法在fragment中显示 2.修改listView预览图的默认图片

--- a/res/layout/activity_context_news.xml
+++ b/res/layout/activity_context_news.xml
@@ -52,7 +52,7 @@
             android:layout_alignParentRight="true"
             android:gravity="center"
             android:textSize="18sp"
-            android:text="时间：" />
+            android:text="" />
 
         <TextView
             android:id="@+id/tv_context_tag"
@@ -61,7 +61,7 @@
             android:layout_alignParentLeft="true"
             android:gravity="center"
             android:textSize="18sp" 
-            android:text="类别："/>
+            android:text=""/>
     </RelativeLayout>
 
     <RelativeLayout
