1.基本完成百科页面的viewpager,bean等构建，除了顶部导航栏，其他都能显示 2.对各个singleFragment进行处理，假如listview全部数据都加载完毕，会弹出toast消息说数据加载完毕

--- a/res/layout/fragment_knowledge.xml
+++ b/res/layout/fragment_knowledge.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:descendantFocusability="blocksDescendants"
     android:orientation="vertical" >
 
     <com.yin.myhealthy.view.ChildViewPager
-        android:id="@+id/child_vp"
+        android:id="@+id/child_vp_knowledge"
         android:layout_width="wrap_content"
-        android:layout_height="340dp" />
+        android:layout_height="match_parent" />
 
 </LinearLayout>
