--- a/res/layout/bar_top.xml
+++ b/res/layout/bar_top.xml
@@ -62,10 +62,8 @@
             </RadioGroup>
         </HorizontalScrollView>
     </LinearLayout>
-    
-    
-    
-     <!-- Diet页面导航条 -->
+
+    <!-- Diet页面导航条 -->
 
     <LinearLayout
         android:id="@+id/ll_topbar_diet"
@@ -120,14 +118,127 @@
                     android:id="@+id/rb_topbar_diet_7"
                     style="@style/radioButton"
                     android:text="健脾" />
-                
-                
-                
             </RadioGroup>
         </HorizontalScrollView>
     </LinearLayout>
+
+    <!-- 药箱页面导航条 -->
+
+    <LinearLayout
+        android:id="@+id/ll_topbar_medicine"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
+
+        <HorizontalScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+
+            <RadioGroup
+                android:id="@+id/rg_topbar_medicine"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="left"
+                android:orientation="horizontal"
+                android:paddingBottom="6dp"
+                android:paddingTop="6dp" >
+
+                <RadioButton
+                    android:id="@+id/rb_topbar_medicine_1"
+                    style="@style/radioButton"
+                    android:checked="true"
+                    android:text="性病用药" />
+
+                <RadioButton
+                    android:id="@+id/rb_topbar_medicine_2"
+                    style="@style/radioButton"
+                    android:text="抗结核及麻风类" />
+
+                <RadioButton
+                    android:id="@+id/rb_topbar_medicine_3"
+                    style="@style/radioButton"
+                    android:text="血液疾病类" />
+
+                <RadioButton
+                    android:id="@+id/rb_topbar_medicine_4"
+                    style="@style/radioButton"
+                    android:text="水电解质及酸碱" />
+
+                <RadioButton
+                    android:id="@+id/rb_topbar_medicine_5"
+                    style="@style/radioButton"
+                    android:text="抗寄生虫类" />
+
+                <RadioButton
+                    android:id="@+id/rb_topbar_medicine_6"
+                    style="@style/radioButton"
+                    android:text="风湿免疫科" />
+
+                <RadioButton
+                    android:id="@+id/rb_topbar_medicine_7"
+                    style="@style/radioButton"
+                    android:text="肿瘤科" />
+            </RadioGroup>
+        </HorizontalScrollView>
+    </LinearLayout>
+
     
-    
-    
+    <!-- 百科页面导航条 -->
+
+    <LinearLayout
+        android:id="@+id/ll_topbar_knowledge"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
+
+        <HorizontalScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+
+            <RadioGroup
+                android:id="@+id/rg_topbar_knowledge"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="left"
+                android:orientation="horizontal"
+                android:paddingBottom="6dp"
+                android:paddingTop="6dp" >
+
+                <RadioButton
+                    android:id="@+id/rb_topbar_knowledge_1"
+                    style="@style/radioButton"
+                    android:checked="true"
+                    android:text="老人健康" />
+
+                <RadioButton
+                    android:id="@+id/rb_topbar_knowledge_2"
+                    style="@style/radioButton"
+                    android:text="孩子健康" />
+
+                <RadioButton
+                    android:id="@+id/rb_topbar_knowledge_3"
+                    style="@style/radioButton"
+                    android:text="健康饮食" />
+
+                <RadioButton
+                    android:id="@+id/rb_topbar_knowledge_4"
+                    style="@style/radioButton"
+                    android:text="男性健康" />
+
+                <RadioButton
+                    android:id="@+id/rb_topbar_knowledge_5"
+                    style="@style/radioButton"
+                    android:text="女性保养" />
+
+                <RadioButton
+                    android:id="@+id/rb_topbar_knowledge_6"
+                    style="@style/radioButton"
+                    android:text="孕婴手册" />
+
+                <RadioButton
+                    android:id="@+id/rb_topbar_knowledge_7"
+                    style="@style/radioButton"
+                    android:text="私密生活" />
+            </RadioGroup>
+        </HorizontalScrollView>
+    </LinearLayout>
 
 </LinearLayout>
