--- a/res/layout/activity_context_diet.xml
+++ b/res/layout/activity_context_diet.xml
@@ -7,7 +7,8 @@
         android:id="@+id/rl_context_first"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_alignParentTop="true" >
+        android:layout_alignParentTop="true"
+        android:background="@color/darkseagreen" >
 
         <ImageButton
             android:id="@+id/ib_context_back"
@@ -32,72 +33,67 @@
             android:layout_width="250dp"
             android:layout_height="match_parent"
             android:layout_centerHorizontal="true"
+            android:gravity="center"
             android:singleLine="false"
-      		android:gravity="center"
             android:textSize="18sp" />
     </RelativeLayout>
 
     <RelativeLayout
         android:id="@+id/rl_context_second"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_below="@id/rl_context_first" 
-        android:layout_marginLeft="4dp"
-        android:layout_marginRight="4dp">
-
-        <TextView
-            android:id="@+id/tv_context_bar"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_alignParentLeft="true"
-            android:gravity="left"
-            android:textSize="18sp" 
-            android:text="功能："/>
-
-        
-        <!-- 暂不显示疗效 -->
-         <TextView
-            android:id="@+id/tv_context_menu"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_alignParentLeft="true"
-            android:layout_below="@id/tv_context_bar"
-            android:gravity="left"
-            android:textSize="18sp" /> 
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:id="@+id/rl_context_third"
-        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/rl_context_second"
-        android:gravity="center_horizontal" 
-        android:layout_marginLeft="4dp"
-        android:layout_marginRight="4dp"
-        >
+        android:layout_below="@id/rl_context_first"
+        android:background="@color/lemonchiffon"
+        android:gravity="center_horizontal" >
 
-        <com.loopj.android.image.SmartImageView
-            android:id="@+id/siv_context_img"
-            android:layout_width="wrap_content"
+        <ScrollView
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            />
+            android:layout_marginLeft="4dp"
+            android:layout_marginRight="4dp" >
 
-        <ScrollView 
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            >
-            <TextView
-            android:id="@+id/tv_context_contextmsg"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/siv_context_img"
-            android:gravity="left"
-            android:textSize="18sp" />
-            
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="4dp"
+                android:layout_marginRight="4dp" >
+
+                <TextView
+                    android:id="@+id/tv_context_bar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="45dp"
+                    android:layout_alignParentLeft="true"
+                    android:gravity="left"
+                    android:text="功能："
+                    android:textSize="18sp" />
+
+                <!-- 暂不显示疗效 -->
+
+                <TextView
+                    android:id="@+id/tv_context_menu"
+                    android:layout_width="wrap_content"
+                    android:layout_height="40dp"
+                    android:layout_alignParentLeft="true"
+                    android:layout_below="@id/tv_context_bar"
+                    android:gravity="left"
+                    android:textSize="18sp" />
+
+                <com.loopj.android.image.SmartImageView
+                    android:id="@+id/siv_context_img"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentTop="true"
+                    android:layout_below="@id/tv_context_bar" />
+
+                <TextView
+                    android:id="@+id/tv_context_contextmsg"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/tv_context_bar"
+                    android:gravity="left"
+                    android:textSize="18sp" />
+            </RelativeLayout>
         </ScrollView>
-        
-        
     </RelativeLayout>
 
 </RelativeLayout>
