--- a/res/layout/activity_splash.xml
+++ b/res/layout/activity_splash.xml
@@ -2,14 +2,24 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center_vertical"
-    android:orientation="vertical" >
+    android:background="@drawable/img_splash_2"
+    android:orientation="vertical" 
+    android:gravity="center">
 
     <TextView
         android:id="@+id/tv_splash_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-         />
+        android:textColor="@color/lemonchiffon"
+        android:text="" />
+
+    <TextView
+        android:id="@+id/vision"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+		android:layout_margin="50dp"
+      
+        android:text="版本：1.0" />
 
 </LinearLayout>
