--- a/res/layout/fragment_base_lv.xml
+++ b/res/layout/fragment_base_lv.xml
@@ -1,10 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/ll_frag"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:id="@+id/ll_frag_healthyknow" >
+    android:orientation="vertical" 
+     android:gravity="center">
 
-
-
+    <TextView 
+        android:id="@+id/tv_loading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+		android:layout_gravity="center"
+		android:text="正在加载"
+		android:textSize="20sp"
+		
+        />
+    
 </LinearLayout>
